--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Milt Aubry - Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Milt Aubry</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/MiltAubry.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Milt Aubry
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Economics📚</div>
+        <p class="lead mb-4"> My name is Milt Aubry and I was born and raised in San Diego. My whole life I have always been known for being really energetic and full of energy, but also serious, teachable and prepared when in the classroom. As someone who has always had so much energy, I’ve always played a lot of sports that include baseball, tennis, basketball, and football. Most of my free time has been spent playing these sports along with the occasional Saturday night out with the boys. Although my family is small with only both of my parents and myself I have for the most part always had a fun time throughout my childhood that has been filled with some great memories. As a shy youngster I always tended to have small friend group, but looking back on it I wouldn’t change anything. All of these friends that I had growing up are still my best friends now. <br><br>
 
-        Enter bio here<br><br>
+          These days you will find me as a student at the University of California Riverside where I am pursuing a bachelor's degree in Economics. In my first year of college I went through some struggles to find my footing in such a big University but eventually I was able to get acclimated to my new life and recently have been enjoying myself. As a second year college student, one of the biggest things for me was to find the right group of friends that I actually felt a good connection with. Now with a great group of friends around me, I never feel like I’m alone in anything because they always have my back. Recently I have also found that time management is especially important with how much I have going on in my life right now. I really hope that everything that I’m doing right now will pay off in the future.
+<br><br>
 
-        Enter bio here
+          After college, I have set some lofty goals for myself such as getting a job that pays me more than 200,000 dollars plus but at the same time is also a job that I enjoy. Recently, I entered the job market for a part time job and found one at Yogurtland. Although I had a great time working there in the month that I was there, I found myself not satisfied with the checks that I was receiving as I knew that I was worth more. This is why I decided to accept a job at Dominos as a Pizza Delivery Driver and since then I have been really happy with the pay and also with the coworkers who I work with. Hopefully if I save up enough money before the end of college I will be able to buy my first apartment and get my start in investing in Real Estate. As A 19 year old with so much to learn I am excited for what lies ahead. Hopefully in 10 years I will have an established career with a family of my own and a home that I can call my own. 
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
           <a target="_blank" href="https://github.com">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/home">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:maubr002@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +90,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Cashier/Staff</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Yogurland</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Checked out customers<br> 
+              • Prepped fruit and washed dishes<br>
+              • Stirred yogurt and wiped tables<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2019 - October 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Pizza Delivery Driver</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Dominos</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Deliver pizzas to the houses of customers with excellent service<br>
+              • Work in the store and prepare pizzas and answer delivery calls<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Tennis Coach</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Taught the basics of tennis<br>
+            • Taught strtegy of tennis to more advanced students<br>
+            • In charge of 30+ students at a time<br>
+            • Prepared daily schedule for students<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2016 - June 2019</span>
           </div>
         </div>
 
@@ -152,34 +150,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Economics</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - December 2022</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
         </div>
 
       </div>
@@ -191,7 +168,13 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            
+            <img src="img/ec3.jpg" width="500px">
+            <img src="img/ec2.png" width="500px">
+            <br>
+            <img src="img/ec4.jpg" width="500px">
+            <img src="img/ec1.jpg" width="500px">
+            
         </center>
       </div>
     </section>
@@ -199,7 +182,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Milt Aubry</center><br>
 
 
   </div>
